--- a/src/main/resources/templates/node/node-detail.html
+++ b/src/main/resources/templates/node/node-detail.html
@@ -70,9 +70,9 @@
                                                 <div class="modal-body text-center">
                                                     정말 삭제하시겠습니까?
                                                 </div>
-                                                <div class="text-center mb-3">
-                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                                                    <a type="button" class="btn btn-danger" th:href="@{/admin/node/delete/{nodeId}(nodeId=${nodeDto.getNodeId()})}">삭제</a>
+                                                <div class="modal-footer text-center justify-content-center">
+                                                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">닫기</button>
+                                                    <a type="button" class="btn btn-danger delete" th:href="@{/admin/node/delete/{nodeId}(nodeId=${nodeDto.getNodeId()})}">삭제</a>
                                                 </div>
                                             </div>
                                         </div>
