--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -113,7 +113,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:each="user : ${userList.userList}" th:onclick="|location.href='@{/admin/users/{userId}(userId=${user.getUserId()})}'|">
+                                    <tr th:each="user : ${userList.userList}" style="cursor:pointer" th:onclick="|location.href='@{/admin/users/{userId}(userId=${user.getUserId()})}'|">
                                         <td th:text="${user.getUsername()}">Mark</td>
                                         <td th:text="${user.getUserNickname()}">Otto</td>
                                         <td th:text="${user.getUserGender()}">@mdo</td>
