1. 지점관리, 경로관리 Table width 수정

--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -87,8 +87,8 @@
                                 <a href="/admin/node/add" th:href="@{/admin/node/add}" class="mt-3 btn btn-primary add">지점 추가</a>
                             </div>
                         </div>
-                        <div class="row table">
-                            <table class="table align-middle table-hover text-center rounded pt-2 fontReg">
+                        <div class="row">
+                            <table class="table table-hover text-center rounded pt-2 fontReg">
                                 <thead style="position : sticky; top:0;">
                                     <tr class="fs-5">
                                         <th scope="col">
