--- a/src/main/resources/templates/line/line-manage.html
+++ b/src/main/resources/templates/line/line-manage.html
@@ -87,7 +87,7 @@
                                 <a type="submit" class="mt-3 btn btn-primary add" href="/admin/line/add" th:href="@{/admin/line/add}">경로 추가</a>
                             </div>
                         </div>
-                        <div class="row bg-white table pe-2">
+                        <div class="row bg-white pe-2">
                             <table class="table table-hover mt-2 text-center rounded fontReg">
                                 <thead style="position: sticky; top:0;">
                                 <tr>
