--- a/src/main/resources/templates/place/place-detail.html
+++ b/src/main/resources/templates/place/place-detail.html
@@ -62,7 +62,7 @@
                                                 <div class="form-floating mb-3">
                                                     <p class="fs-4 nodeHeader">장소 유형</p>
                                                     <hr>
-                                                    <select class="form-control fontHv mt-0 pt-0 fs-6" th:field="*{place.placeCategory}" id="adminAuthorization" name="adminAuthorization" style="color : rgb(17,160,248); border-radius : 1rem;">
+                                                    <select class="form-control fontHv mt-0 pt-0 fs-6" onchange="changeSideImg()" th:field="*{place.placeCategory}" id="category" style="color : rgb(17,160,248); border-radius : 1rem;">
                                                         <option th:each="p : ${placeCategory}" th:value="${p}" th:text="${p}" th:selected="${placeDto.place.placeCategory} == ${p}"></option>
                                                     </select>
                                                 </div>
@@ -137,7 +137,7 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="form-floating mb-3">
+                                            <div class="form-floating mb-3" id="sideImage">
                                                 <div class="row">
                                                     <div class="col text-start fs-4 nodeHeader">부가 이미지</div>
                                                 </div>
@@ -281,6 +281,17 @@
                 );
         });
     }
+
+    function changeSideImg(){
+        let category = document.getElementById("category");
+        if(category.value==="BUILDING"){
+            document.getElementById("sideImage").style.visibility = 'hidden';
+        } else {
+            document.getElementById("sideImage").style.visibility = 'visible';
+        }
+    }
+
+    changeSideImg();
 
     document.getElementById('addInput').addEventListener('click', function() {
         // 새로운 input 요소 생성
