--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -120,12 +120,13 @@
             </div>
         </div>
         <div class="col offset-5 mt-4">
+            <!--
             <span th:text="|${inquiryWaitSize}+|" class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:82.4%; background-color: rgb(220, 38,38);">
                 32+
                 <span class="visually-hidden">unread messages</span>
             </span>
-            <i class="bi bi-bell-fill fs-3"></i>
-            <span th:text="|${waiterListSize}+|" class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:86.5%; background-color: rgb(220, 38,38);">
+            <i class="bi bi-bell-fill fs-3"></i>-->
+            <span th:text="|${waiterListSize}+|" class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:87.8%; background-color: rgb(220, 38,38);">
                 3+
                 <span class="visually-hidden">unread messages</span>
             </span>
@@ -133,7 +134,7 @@
             <a href="/admin/main-page" class="text-center ms-5" style="color:black;">
                 <i class="bi bi-door-closed-fill fs-3"></i>
             </a>
-            <i class="bi bi-person-fill fs-3 ms-5"></i>
+            <!--<i class="bi bi-person-fill fs-3 ms-5"></i>-->
         </div>
     </header>
 <script th:fragment="search">
