--- a/src/main/resources/templates/inquiry/inquiry-detail.html
+++ b/src/main/resources/templates/inquiry/inquiry-detail.html
@@ -74,7 +74,7 @@
                                                 <p class="fs-4 nodeHeader">답변 내용 <span th:if="${inquiry.inquiryProgress}" class="fs-5"><span style="color:red">*&nbsp;</span>답변이 완료되었습니다..</span></p>
                                                 <hr>
                                                 <div class="form-floating">
-                                                    <textarea class="form-control" th:text="${inquiry.inquiryAnswer}" name="inquiryAnswer" placeholder="답변을 남겨주세요" style="height: 6vh" id="sendAns"></textarea>
+                                                    <textarea class="form-control" th:text="${inquiry.inquiryAnswer}" name="inquiryAnswer" placeholder="답변 공간" style="height: 6vh" id="sendAns"></textarea>
                                                 </div>
                                             </div>
                                         </div>
