미답변 문의 목록만 출력할 수 있게 해두었음. 끝

--- a/src/main/resources/templates/inquiry/inquiry-manage.html
+++ b/src/main/resources/templates/inquiry/inquiry-manage.html
@@ -18,7 +18,12 @@
                     <div class="row ms-1">
                         <div class="col-11 ms-5" style="width:88%;">
                             <div class="row mb-3 fs-1 fontHv">
-                                문의 목록
+                                <div class="col">
+                                    문의 목록
+                                </div>
+                                <div class="col-2 mt-2">
+                                    <a href="/admin/inquiry/required/0" class="btn btn-outline-warning">미답변 문의 목록</a>
+                                </div>
                             </div>
                             <div class="row bg-white">
                                 <div class="col-5 align-items-center">
