--- a/src/main/resources/templates/place/place-detail.html
+++ b/src/main/resources/templates/place/place-detail.html
@@ -63,6 +63,7 @@
                                                     <p class="fs-4 nodeHeader">장소 유형</p>
                                                     <hr>
                                                     <select class="form-control fontHv mt-0 pt-0 fs-6" onchange="changeSideImg()" th:field="*{place.placeCategory}" id="category" style="color : rgb(17,160,248); border-radius : 1rem;">
+                                                        <option value="">장소 선택</option>
                                                         <option th:each="p : ${placeCategory}" th:value="${p}" th:text="${p}" th:selected="${placeDto.place.placeCategory} == ${p}"></option>
                                                     </select>
                                                 </div>
@@ -284,7 +285,7 @@
 
     function changeSideImg(){
         let category = document.getElementById("category");
-        if(category.value==="BUILDING"){
+        if(category.value != "BUILDING"){
             document.getElementById("sideImage").style.visibility = 'hidden';
         } else {
             document.getElementById("sideImage").style.visibility = 'visible';
