AI UI, 이미지 저장, table 검색 기능, 로그를 제외하고 기능 완성

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -25,9 +25,13 @@
                 </div>
                 <div class="row ms-3">
                     <div class="col text-start" style="border-left : 8px solid rgb(255,179,0)">
-                        요청하신 페이지를 처리 중에 오류가 발생했습니다. 서비스 이용에 불편을 드려 죄송합니다.<br>
-                        입력하신 주소가 정확한지 확인 후 다시 시도해 주시기 바랍니다.
+                        <p>요청하신 페이지를 처리 중에 오류가 발생했습니다. 서비스 이용에 불편을 드려 죄송합니다.</p>
+                        <p>입력하신 주소가 정확한지 확인 후 다시 시도해 주시기 바랍니다.</p>
+                        <a class="btn btn-outline-secondary" href="/admin/main-page">메인 페이지 이동</a>
                     </div>
+                </div>
+                <div class="row ms-3">
+
                 </div>
             </div>
         </div>
